# hackman

./: .gitignore  default.nix  hackman.nix  icat.nix  pkgs.nix  pyproject.toml  shell.nix
hackman/: settings_prod.py
nix/: buildPyPkgs.nix  downloadPyPkgs.nix  hackman.nix  pkgs.nix  sources.json
nix/os/: flake.nix
