[tool.poetry]
name = "hackman"
version = "0.1.1"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "GPL-2.0-only"
packages = [
    { include = "dsl_lights" },
    { include = "dsl_log" },
    { include = "dsl_occupied" },
    { include = "dsl_buttons" },

    { include = "hackman" },
    { include = "hackman_door" },
    { include = "hackman_notifier" },
    { include = "hackman_payments" },
    { include = "hackman_rfid" },
]

[tool.poetry.scripts]
dsl-lights = 'dsl_lights:main'
dsl-log = 'dsl_log:main'
dsl-occupied = 'dsl_occupied:main'
dsl-buttons = 'dsl_buttons:main'

hackman = 'hackman.cmd:hackman'
hackman-manage = 'hackman.manage:main'

[tool.poetry.dependencies]
python = "~3.9"
hidapi = { url = "https://github.com/9gel/cython-hidapi/archive/refs/tags/hidapi-0.14.0-c875023.tar.gz" }
Django = "^4.2.13"
Jinja2 = "^3.1.4"
gunicorn = "^22.0.0"
django-redis = "^5.2.0"
IPy = "^1.01"
django-cors-headers = "^3.13.0"
django-oauth-toolkit = "^2.2.0"
gevent = "^24.2.1"
pyserial = "^3.5"
mote = "^0.0.4"
psycopg2 = "^2.9.9"
rpi-gpio = "^0.7.1"
django = "^4.1.2"
ipy = "^1.1"
jinja2 = "^3.1.2"
cryptography = "42.0.4"
poetry-plugin-export = "^1.8.0"
gpiozero = "^2.0.1"
rapidfuzz = {url = "https://github.com/9gel/RapidFuzz/archive/refs/tags/rapidfuzz-3.9.4.tar.gz"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
coverage = "^6.5.0"
django-stubs = "^1.12.0"
flake8 = "^7.0.0"
mypy = "^0.982"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.8.0"
types-redis = "^4.3.21.3"
types-requests = "^2.28.11.2"
johnnydep = "^1.20.5"

[tool.poetry.group.build.dependencies]
setuptools = "69.5.1"
wheel = "^0.43.0"
cython = "3.0.10"
cffi = "1.16.0"
scikit-build = "0.17.6"
greenlet = "3.0.3"
cmake = "^3.29.6"
distro = "^1.9.0"
packaging = "^24.1"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
